--- a/item.html
+++ b/item.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trgovina-kupovina</title>
+    <title>Item</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -26,12 +26,38 @@
         </div>
     </div>
 
+    <!-- item detalji -->
+    <div class="small-container single-item">
+        <div class="row">
+            <div class="col-2">
+                <img src="img/andro-blade kanter.jpg" width="100%">
+            </div>
+            <div class="col-2">
+                <h1>ANDRO - blade Kanter FO ALL/S</h1>
+                <h4>72 €</h4>
+                <input type="number" value="1">
+                <a href="" class="btn">Dodaj u košaricu</a>
+                <h3>Specifikacije</h3>
+                <p>4.5 mm thick center veneer of balsa, intermediate ply of TXL Fiber and outer veneer of Limba.
+                    The TXL Fiber stabilizes the wood and gives the Kanter FO ALL/S a larger sweet spot.
+                    The low weight, which is usual for balsa woods, supports the controlled feel.
+                    For players who want to play a controlled blocking and counterattacking game with well thought-out offensive actions.</p>
+            </div>
+        </div>
+    </div>
+
+    <!-- naslov -->
+    <div class="small-container">
+        <div class="row row-2">
+            <h2>Možda vas još zanimaju</h2>
+        </div>
+    </div>
+
     <!-- proizvodi -->
     <div class="small-container">
-        <h2 class="title">Svi proizvodi</h2>
         <div class="row">
             <div class="col-4">
-                <a href="item.html"><img src="img/andro-blade kanter.jpg"></a>
+                <img src="img/andro-blade kanter.jpg">
                 <h4>ANDRO - blade Kanter FO ALL/S</h4>
                 <p>72 €</p>
             </div>
@@ -46,40 +72,7 @@
                 <p>83 €</p>
             </div>
         </div>
-        <div class="row">
-            <div class="col-4">
-                <img src="img/yasaka-rubber-rakza.jpg">
-                <h4>Yasaka rubber Rakza 9</h4>
-                <p>47 €</p>
-            </div>
-            <div class="col-4">
-                <img src="img/butterfly-rubber glayzer.jpg">
-                <h4>BUTTERFLY - rubber Glayzer 09C</h4>
-                <p>44 €</p>
-            </div>
-            <div class="col-4">
-                <img src="img/stiga-rubber-mantra.jpg">
-                <h4>STIGA - rubber Mantra PRO XH</h4>
-                <p>52 €</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-4">
-                <img src="img/andro-balls-zero t.jpg">
-                <h4>ANDRO - balls Zero T*** 72 pcs</h4>
-                <p>163 €</p>
-            </div>
-            <div class="col-4">
-                <img src="img/butterfly-balls.jpg">
-                <h4>BUTTERFLY - Balls R40+ *** (72 pcs)</h4>
-                <p>100 €</p>
-            </div>
-            <div class="col-4">
-                <img src="img/xiom-balls.png">
-                <h4>Xiom- ball Bravo *** 40+ 6pcs</h4>
-                <p>5 €</p>
-            </div>
-        </div>
+    </div>
     </div>
 
     <!-- footer -->
