--- a/main.html
+++ b/main.html
@@ -8,11 +8,12 @@
 </head>
 <body>
 
+    <!-- header -->
     <div class="header">
         <div class="container">
             <div class="navbar">
                 <div>
-                    <img src="img/logo.png" class="logo" width="125px">
+                    <a href="main.html"><img src="img/logo.png" class="logo" width="125px"></a>
                 </div>
                 <nav>
                     <ul id="MenuItems">
@@ -21,13 +22,14 @@
                         <li><a href="login.html">Login</a></li>
                     </ul>
                 </nav>
-                <img src="img/kosara.png" width="30px" height="30px">
+                <a href="cart.html"><img src="img/kosara.png" width="30px" height="30px"></a>
                 <img src="img/menu.png" class="menu-icon" onclick="menutoggle()">
             </div>
             <div class="row">
                 <div class="col-2">
                     <h1>Nove gume i reketi!</h1>
                     <p>Kupite jeftino, a kvalitetno.</p>
+                    <a href="kupovina.html" class="btn">Kupovina</a>
                 </div>
                 <div class="col-2">
                     <img src="img/home.png">
@@ -36,6 +38,46 @@
         </div>
     </div>
 
+    <!-- brands -->
+    <div class="brands">
+        <div class="small-container">
+            <div class="row">
+                <div class="col-5">
+                    <img src="img/butterfly.png">
+                </div>
+                <div class="col-5">
+                    <img src="img/dhs.jpg">
+                </div>
+                <div class="col-5">
+                    <img src="img/joola.png">
+                </div>
+                <div class="col-5">
+                    <img src="img/tibhar.jpg">
+                </div>
+                <div class="col-5">
+                    <img src="img/yasaka.jpg">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- footer -->
+    <div class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="footer-col-1">
+                    <h3>Kontakt osoba: julovric@gmail.com</h3>
+                </div>
+                <div class="footer-col-2">
+                    <img src="img/logo.png">
+                    <p>Osiguravam najbolju kvalitetu</p>
+                </div>
+                <div class="footer-col-3">
+                    <h3>Želim vam sigurnu kupovinu</h3>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="script.js"></script>
 </body>
