--- a/item.html
+++ b/item.html
@@ -21,7 +21,7 @@
                     <li><a href="login.html">Login</a></li>
                 </ul>
             </nav>
-            <img src="img/kosara.png" width="30px" height="30px">
+            <a href="cart.html"><img src="img/kosara.png" width="30px" height="30px"></a>
             <img src="img/menu.png" class="menu-icon" onclick="menutoggle()">
         </div>
     </div>
@@ -94,6 +94,6 @@
     </div>
 
 
-    <script src="script.js"></script>
+    <script src="menu.js"></script>
 </body>
 </html>
