--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trgovina-home</title>
+    <title>Trgovina</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -79,6 +79,6 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="menu.js"></script>
 </body>
 </html>
