--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
                     <li><a href="login.html">Login</a></li>
                 </ul>
             </nav>
-            <img src="img/kosara.png" width="30px" height="30px">
+            <a href="cart.html"><img src="img/kosara.png" width="30px" height="30px"></a>
             <img src="img/menu.png" class="menu-icon" onclick="menutoggle()">
         </div>
     </div>
@@ -36,18 +36,18 @@
                 <div class="col-2">
                     <div class="form-container">
                         <div class="form-btn">
-                            <span onclick="login()">login</span>
+                            <span onclick="login()">Login</span>
                             <span onclick="register()">Register</span>
                             <hr id="indicator">
                         </div>
 
-                        <form id="login-form">
+                        <form id="LoginForm">
                             <input type="text" placeholder="ime">
                             <input type="password" placeholder="Password">
                             <button type="submit" class="btn">Login</button>
                         </form>
 
-                        <form id="reg-form">
+                        <form id="RegForm">
                             <input type="text" placeholder="ime">
                             <input type="email" placeholder="Email">
                             <input type="password" placeholder="Password">
@@ -78,6 +78,7 @@
     </div>
 
 
-    <script src="script.js"></script>
+    <script src="login.js"></script>
+    <script src="menu.js"></script>
 </body>
 </html>
