--- a/login.html
+++ b/login.html
@@ -42,13 +42,13 @@
                         </div>
 
                         <form id="LoginForm">
-                            <input type="text" placeholder="ime">
+                            <input type="text" placeholder="Username">
                             <input type="password" placeholder="Password">
                             <button type="submit" class="btn">Login</button>
                         </form>
 
                         <form id="RegForm">
-                            <input type="text" placeholder="ime">
+                            <input type="text" placeholder="Username">
                             <input type="email" placeholder="Email">
                             <input type="password" placeholder="Password">
                             <button type="submit" class="btn">Register</button>
